# vauban

./: .env.example  .gitignore  .gitmodules  .readthedocs.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  ROADMAP.md  check_weave.py  check_weave_model.py  main.py  mkdocs.yml  ordeal.toml  pixi.toml  pyproject.toml  repro_nullcontext.py  run_tests.sh  test_refusal_surface.py  test_simple.py  test_write.py  verify_breach.py  verify_rate_limit.py  verify_setup.py  verify_weave_refactor.py
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: config.md  environment-benchmarks.md  getting-started.md  hf-datasets.md  how_vauban_works.md  how_vauban_works_fr.md  index.md  requirements.txt  robots.txt  scoring_criteria.md  surface.md
docs/capabilities/: access-levels.md  change-release-gates.md  defend-your-model.md  index.md  modify-weights.md  public-sector-adoption.md  stress-test-defenses.md  understand-your-model.md
docs/class/: glossary.md  index.md  part1_what_is_abliteration.md  part2_your_first_abliteration.md  part3_under_the_hood.md  part4_the_refusal_surface.md  part5_going_deeper.md  part6_attacks_and_defenses.md  part7_production_workflows.md  part8_model_diffing_and_defense.md  references.md
docs/concepts/: abliteration.md  activation-geometry.md  defense-complementarity.md  linear-representation.md  measurement.md  refusal-direction.md  steering.md  surface-mapping.md
docs/diagrams/: vauban-overview.html  vauban-overview.md
docs/javascripts/: mathjax.js
docs/overrides/: main.html
docs/principles/: attack-defense-duality.md  composability.md  last-mile-reliability.md  reproducibility.md
docs/reference/: glossary.md  papers.md  session-api.md
docs/releases/: v0.4.1.md
docs/research/: behavior-diff-traces.md  mps-primitive-boundary.md  reasoning_mech_interp.md  runtime-primitive-pipeline.md  tokenizer_analysis.md  torch_surface_matrix.md  trace-first-inference-stack.md  what-changes-when-models-are-changed.md
docs/stylesheets/: extra.css
examples/: 01_atomic_scout.py  02_intel_assessment.py  03_full_siege.py  04_custom_target.py  05_visualization.py  06_agent_red_team.py  07_advanced_scenarios.py  behavior_report.toml  config.toml  gemma4_audit_quick.toml  gemma4_detect_fast.toml  gemma4_guard_smoke.toml  gemma4_scorecard.toml  gemma4_token_audit.toml  intervention_eval.toml
examples/audit_demo/: remote_audit.py
examples/behavior_diff/: refusal_boundary_lite.toml
examples/behavior_loop/: README.md  baseline_trace.toml  candidate_trace.toml  diff.toml  suite.toml
examples/behavior_trace/: refusal_boundary_lite.toml
examples/benchmarks/: README.md  data_exfil.toml  fedex_phishing.toml  garage_door.toml  ignore_email.toml  salesforce_admin.toml  share_doc.toml
examples/endpoint_change_audit/: README.md  baseline_trace.toml  candidate_trace.toml  diff.toml  suite.toml
examples/grayswan/: arena_client.py
examples/notebooks/: quickstart.ipynb
examples/public_sector_pilot/: README.md  REVIEWER_INDEX.md  behavior_diff.toml  readiness.toml  suite.toml
examples/public_sector_readiness/: README.md
examples/qwen_coding_refusal_audit/: README.md  baseline_trace.toml  candidate_trace.toml  diff.toml  suite.toml
examples/reproductions/: arditi_refusal_direction_intervention.toml  arditi_refusal_direction_lite.toml
experiments/: arena_email_scenario.toml  arena_grayswan.toml  arena_indirect_injection.toml  arena_intel.md  arena_safeguards.toml  gan_loop.toml  gan_loop_v2.toml  gan_loop_v3.toml  gan_loop_v4.toml  gan_loop_v5_egd.toml  pre_deploy_audit.toml
experiments/reasoning_diff/: 01_reasoning_diff_1.5b.toml  01_reasoning_diff_7b.toml  02_alignment_diff_1.5b.toml  02_alignment_diff_7b.toml  (+9 more)
scripts/: check_backend.py  license_headers.py  setup_linux_env.sh  torch_cuda_real_model_smoke.py  torch_cuda_trace_sweep.py
tests/: _mock_mlx.py  _mock_torch.py  conftest.py  integration_test.py  integration_test_softprompt.py  test_ai_act.py  test_ai_act_article50_helpers.py  test_ai_act_battle.py  test_ai_act_case_library.py  test_ai_act_config_runner_extra.py  test_ai_act_helper_edges.py  test_ai_act_rulebook_helpers.py  test_algebra.py  test_amplecgc.py  test_api.py  test_api_eval.py  test_api_eval_proxy.py  test_api_trace.py  test_arch.py  test_attack_init.py  test_audit.py  test_awareness.py  test_backend.py  test_behavior_diff_toml.py  test_behavior_loop_e2e.py  test_behavior_primitives.py  test_behavior_report_toml.py  test_behavior_suite_scoring.py  test_behavior_trace_toml.py  test_benchmark_cli.py  test_benchmark_examples.py  test_benchmark_scorecard.py  test_benchmarks.py  test_bijection.py  test_capabilities.py  test_cast.py  test_cast_unit.py  test_circuit.py  test_circuit_extra.py  test_cli_man.py  (+171 more)
vauban/: __init__.py  __main__.py  _arch.py  _array.py  _backend.py  _compose.py  _diff.py  _forward.py  _init.py  _model_io.py  _model_torch.py  _network.py  _nn.py  _nn_contract.py  _nn_mlx.py  _nn_torch.py  _objective.py  _ops.py  _ops_contract.py  _ops_mlx.py  _ops_torch.py  _serializers.py  _suggestions.py  _version.py  ai_act.py  ai_act_pdf.py  algebra.py  api.py  api_eval.py  api_eval_proxy.py  api_trace.py  audit.py  audit_pdf.py  awareness.py  benchmarks.py  bijection.py  capabilities.py  cast.py  circuit.py  cli.py  (+67 more)
(+286 files in other folders)
