[project]
name = "vauban"
version = "0.1.2"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lancedb",
    "scikit-learn",
    "openai",
    "weave",
    "numpy",
    "embedding-atlas",
    "anywidget",
    "pandas",
    "pytest>=9.0.1",
    "python-dotenv>=1.2.1",
    "rich>=14.2.0",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["vauban"]
exclude = ["reports", "reports.*"]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-W", "ignore::sentry_sdk.hub.SentryHubDeprecationWarning"]

[project.scripts]
vauban = "vauban.entry:main"
