[project]
name = "vauban"
version = "0.2.3"
description = "LLM red-teaming and adversarial testing framework"
readme = "README.md"
license = "Apache-2.0"
authors = [
    { name = "Teïlo Millet", email = "teilomillet@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "mlx>=0.22",
    "mlx-lm>=0.21",
]

[project.scripts]
vauban = "vauban.__main__:main"

[project.optional-dependencies]
optimize = ["optuna>=4.0"]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "ty",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vauban"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "TCH",   # flake8-type-checking
    "ANN",   # flake8-annotations
    "RUF",   # ruff-specific rules
]

[tool.ruff.lint.flake8-annotations]
suppress-none-returning = true

[tool.ruff.lint.isort]
known-first-party = ["vauban"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:builtin type SwigPyPacked has no __module__ attribute:DeprecationWarning",
    "ignore:builtin type SwigPyObject has no __module__ attribute:DeprecationWarning",
    "ignore:builtin type swigvarlink has no __module__ attribute:DeprecationWarning",
]
