# SPDX-FileCopyrightText: 2026 Teilo Millet
# SPDX-License-Identifier: Apache-2.0

[project]
name = "vauban"
dynamic = ["version"]
description = "LLM red-teaming and adversarial testing framework"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    { name = "Teïlo Millet", email = "teilomillet@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "mlx>=0.22",
    "mlx-lm>=0.21",
    "ordeal>=0.3.19",
    "pypdf>=6.9.2",
    "reportlab>=4.4.10",
]

[project.scripts]
vauban = "vauban.__main__:main"

[project.optional-dependencies]
optimize = ["optuna>=4.0"]
torch = [
    "torch>=2.0",
    "transformers>=4.36",
    "accelerate>=0.26",
    "huggingface_hub>=0.20",
    "safetensors>=0.4",
]

[dependency-groups]
dev = [
    "hypothesis>=6.100",
    "matplotlib>=3.10.8",
    "pytest",
    "pytest-asyncio",
    "pytest-cov>=7.1.0",
    "ruff",
    "scipy>=1.17.1",
    "ty",
]

[tool.ty.src]
exclude = [".claude/**", "tests/**", "tmp/**"]

# Torch backend: suppress unresolved-import for envs without torch installed.
[[tool.ty.overrides]]
include = ["vauban/_ops_torch.py", "vauban/_nn_torch.py", "vauban/_model_torch.py"]
[tool.ty.overrides.rules]
unresolved-import = "ignore"

# Optional CLI scripts: sentence-transformers is loaded dynamically.
[[tool.ty.overrides]]
include = ["vauban/data/verify_diversity.py", "vauban/data/verify_diversity_model.py"]
[tool.ty.overrides.rules]
unresolved-import = "ignore"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "vauban/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["vauban"]
include = ["vauban/ai_act_rules/*.json"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "TCH",   # flake8-type-checking
    "ANN",   # flake8-annotations
    "RUF",   # ruff-specific rules
]

[tool.ruff.lint.flake8-annotations]
suppress-none-returning = true

[tool.ruff.lint.isort]
known-first-party = ["vauban"]

[tool.pytest.ini_options]
markers = [
    "integration: requires real model (~1GB), skipped unless VAUBAN_INTEGRATION=1",
    "battle: property-based battle tests (hypothesis). Run with: pytest -m battle",
]
filterwarnings = [
    "ignore:builtin type SwigPyPacked has no __module__ attribute:DeprecationWarning",
    "ignore:builtin type SwigPyObject has no __module__ attribute:DeprecationWarning",
    "ignore:builtin type swigvarlink has no __module__ attribute:DeprecationWarning",
]

[tool.coverage.run]
source = ["vauban"]

[tool.coverage.report]
omit = [
    "tests/*",
    "scripts/*",
]

[tool.uv.sources]
